feat: cfg