@@ -6,20 +6,26 @@ import org.bukkit.Material;
 import org.by1337.blib.configuration.serialization.BukkitCodecs;
 import org.by1337.blib.geom.Vec3d;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
+import java.util.Set;
 
 public class Config {
     public static final Codec<Config> CODEC = RecordCodecBuilder.create(instance -> instance.group(
             ArmorHideSettings.CODEC.fieldOf("armor_hide").forGetter(v -> v.armorHide),
-            BukkitCodecs.MATERIAL.listOf().fieldOf("ignore_blocks").forGetter(v -> v.ignoreBlocks)
+            BukkitCodecs.MATERIAL.listOf().fieldOf("ignore_blocks").forGetter(v -> v.ignoreBlocks),
+            HideSettings.CODEC.fieldOf("hide").forGetter(v -> v.hideSettings)
     ).apply(instance, Config::new));
 
     public final ArmorHideSettings armorHide;
     public final List<Material> ignoreBlocks;
+    public final HideSettings hideSettings;
 
-    public Config(ArmorHideSettings armorHide, List<Material> ignoreBlocks) {
+    public Config(ArmorHideSettings armorHide, List<Material> ignoreBlocks, HideSettings hideSettings) {
         this.armorHide = armorHide;
         this.ignoreBlocks = ignoreBlocks;
+        this.hideSettings = hideSettings;
     }
 
     public static class ArmorHideSettings {
@@ -27,19 +33,36 @@ public class Config {
                 Codec.DOUBLE.fieldOf("field_of_view").forGetter(v -> v.fieldOfView),
                 Vec3d.CODEC.fieldOf("expand_aabb").forGetter(v -> v.expandAabb),
                 Codec.BOOL.fieldOf("hide_meta").forGetter(v -> v.hideMeta),
-                Codec.STRING.listOf().fieldOf("disable_worlds").forGetter(v -> new ArrayList<>(v.disableWorlds))
+                Codec.STRING.listOf().fieldOf("disable_worlds").forGetter(v -> new ArrayList<>(v.disableWorlds)),
+                Codec.STRING.fieldOf("bypass_permission").forGetter(v -> v.bypassPermission)
         ).apply(instance, ArmorHideSettings::new));
 
         public final double fieldOfView;
         public final Vec3d expandAabb;
         public final boolean hideMeta;
         public final Set<String> disableWorlds;
+        public final String bypassPermission;
 
-        public ArmorHideSettings(double fieldOfView, Vec3d expandAabb, boolean hideMeta, Collection<String> disableWorlds) {
+        public ArmorHideSettings(double fieldOfView, Vec3d expandAabb, boolean hideMeta, Collection<String> disableWorlds, String bypassPermission) {
             this.fieldOfView = fieldOfView;
             this.expandAabb = expandAabb;
             this.hideMeta = hideMeta;
-            this.disableWorlds = Collections.unmodifiableSet(new HashSet<>(disableWorlds));
+            this.disableWorlds = Set.copyOf(disableWorlds);
+            this.bypassPermission = bypassPermission;
+        }
+    }
+
+    public static class HideSettings {
+        public static Codec<HideSettings> CODEC = RecordCodecBuilder.create(instance -> instance.group(
+                Codec.STRING.listOf().fieldOf("disable_worlds").forGetter(v -> new ArrayList<>(v.disableWorlds)),
+                Codec.STRING.fieldOf("bypass_permission").forGetter(v -> v.bypassPermission)
+        ).apply(instance, HideSettings::new));
+        public final Set<String> disableWorlds;
+        public final String bypassPermission;
+
+        public HideSettings(Collection<String> disableWorlds, String bypassPermission) {
+            this.disableWorlds = Set.copyOf(disableWorlds);
+            this.bypassPermission = bypassPermission;
         }
     }
 }
